Fix horizontal scrollbar related to release notes

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -290,6 +290,9 @@ code {
 .fullscreen .release-notes {
     display: none;
 }
+#release-notes {
+    overflow: hidden;
+}
 .swiper-container {
     min-height: 242px;
 }
